--- a/main_app/chating_interface/interface.html
+++ b/main_app/chating_interface/interface.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<script src="chatClient.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<div id="message" style="background-color:#F5F5F5; width:400px; height:3000px; OVERFLOW-Y:auto; word-wrap: break-word"></div>
+<script type='module' src="Client.js"></script>
+<script src="socket.io/socket.io.js"></script>
+<div id="message" style="background-color:#F5F5F5; width:400px; height:200px; OVERFLOW-Y:auto; word-wrap: break-word"></div>
 
 <div id="chatInput">
  메시지를 입력하세요 <input type='text' id='txtChat' name="txtChat">
